[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/snail.gd" type="Script" id=1]
[ext_resource path="res://textures/snail.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.28586, 6.28087 )

[sub_resource type="Animation" id=2]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 1 ]
}

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 32.7227, 26.291 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 1.5, 3 )

[node name="snail" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.11108, 1.8055 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )
anims/snail = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="floor" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -8, 11 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="col" type="CollisionShape2D" parent="floor"]

transform/pos = Vector2( -8, 11 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 1.11108, 1.8055 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="body_exit" from="floor" to="." method="_on_floor_body_exit"]


